avoid linebreak in german version when time as a two value hour

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -222,7 +222,7 @@ body{
   .tools.container-pca .toolLine, .expertModeOn.container-pca .toolLine, .expertModeOn.container-sc .toolLine{
     max-width: 300px;
     @include respond-to("small"){
-      max-width: 480px;
+      max-width: 510px;
     }
     @include respond-to("medium"){
       max-width: inherit;
